# demo-sol-contract-transaction

./: .gitignore  readme.md
client/: package-lock.json  package.json  userkeypair.json
client/src/: index.ts  instancedata.ts  lib.ts  schemata.ts
sol-demo-contract/: Cargo.toml
sol-demo-contract/src/: lib.rs
