[package]
name = "cw-contract"
version = "0.1.0"
authors = ["Brendan John <bjohn454@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-entrypoint = []

[dependencies]
borsh = "0.9.1"
borsh-derive = "0.9.1"
solana-program = "=1.7.9"
sha2 = "0.9.8"
hex-literal = "0.3.3"
bs58 = "0.4.0"
# rand = "0.8.4"

[dev-dependencies]
solana-program-test = "=1.7.9"
solana-sdk = "=1.7.9"

[lib]
name = "soldemocontract"
crate-type = ["cdylib", "lib"]